--- a/src/components/pages/home/Home.scss
+++ b/src/components/pages/home/Home.scss
@@ -94,7 +94,7 @@
 
         @media screen and (max-width: 414px) {
           background-color: $white-four;
-          border: 1px solid $white;
+          border: 1px solid $white-four;
         }
       }
 
@@ -104,7 +104,7 @@
 
         @media screen and (max-width: 414px) {
           background-color: $white-four;
-          border: 1px solid $white;
+          border: 1px solid $white-four;
         }
       }
 
